--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,17 +20,14 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
       
       - name: Install Dependencies
-        run: cd frontend && npm ci
+        run: npm ci
       
       - name: Build
-        run: |
-          cd frontend
-          npm run build
+        run: npm run build
         env:
           NODE_ENV: production
       
@@ -40,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: 'frontend/dist'
+          path: 'dist'
       
   deploy:
     environment:
